<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_reader_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_reader"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />

                <com.haleydu.cimoc.ui.widget.preference.ChoicePreference
                    android:id="@+id/settings_reader_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/settings_reader_mode" />

                <com.haleydu.cimoc.ui.widget.Option
                    android:id="@+id/settings_reader_config"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_config_summary"
                    app:title="@string/settings_reader_config" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_keep_bright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_keep_bright_summary"
                    app:title="@string/settings_reader_keep_bright" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_show_topbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_show_topbar_summary"
                    app:title="@string/settings_reader_show_topbar" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_hide_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_hide_info_summary"
                    app:title="@string/settings_reader_hide_info" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_hide_nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_hide_nav_summary"
                    app:title="@string/settings_reader_hide_nav" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_ban_double_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_ban_double_click_summary"
                    app:title="@string/settings_reader_ban_double_click" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_paging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_paging_summary"
                    app:title="@string/settings_reader_paging" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_closeautoresizeimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_closeautoresizeimage_summary"
                    app:title="@string/settings_reader_closeautoresizeimage" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_paging_reverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_paging_reverse_summary"
                    app:title="@string/settings_reader_paging_reverse" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_white_edge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_white_edge_summary"
                    app:title="@string/settings_reader_white_edge" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_white_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_white_background_summary"
                    app:title="@string/settings_reader_white_background" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_reader_volume_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_reader_volume_key_controls_summary"
                    app:title="@string/settings_reader_volume_key_controls" />

                <com.haleydu.cimoc.ui.widget.preference.SliderPreference
                    android:id="@+id/settings_reader_scale_factor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:max="300"
                    app:min="100"
                    app:title="@string/settings_reader_scale_factor" />

                <com.haleydu.cimoc.ui.widget.preference.SliderPreference
                    android:id="@+id/settings_reader_controller_trig_threshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:max="100"
                    app:min="1"
                    app:summary="@string/settings_reader_controller_trig_threshold_summary"
                    app:title="@string/settings_reader_controller_trig_threshold" />

                <TextView
                    android:id="@+id/settings_download_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_download"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />

                <com.haleydu.cimoc.ui.widget.preference.SliderPreference
                    android:id="@+id/settings_download_thread"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:max="10"
                    app:min="1"
                    app:title="@string/settings_download_thread" />

                <com.haleydu.cimoc.ui.widget.Option
                    android:id="@+id/settings_download_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_download_scan_summary"
                    app:title="@string/settings_download_scan" />

                <TextView
                    android:id="@+id/settings_search_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_search"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_search_auto_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_search_auto_complete_summary"
                    app:title="@string/settings_search_auto_complete" />

                <TextView
                    android:id="@+id/settings_other_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_other"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_other_connect_only_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_connect_only_wifi_summary"
                    app:title="@string/settings_other_connect_only_wifi" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_other_loadcover_only_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_loadcover_only_wifi_summary"
                    app:title="@string/settings_other_loadcover_only_wifi" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_other_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_check_update_summary"
                    app:title="@string/settings_other_check_update" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_check_update_summary"
                    app:title="@string/settings_check_update" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_firebase_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_firebase_event_summary"
                    app:title="@string/settings_other_firebase_event" />

                <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                    android:id="@+id/settings_other_reduce_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_reduce_ad_summary"
                    app:title="@string/settings_other_reduce_ad" />


                <com.haleydu.cimoc.ui.widget.preference.ChoicePreference
                    android:id="@+id/settings_other_launch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/settings_other_launch" />

                <com.haleydu.cimoc.ui.widget.preference.ChoicePreference
                    android:id="@+id/settings_other_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/settings_other_theme" />

                <com.haleydu.cimoc.ui.widget.preference.SliderPreference
                    android:id="@+id/settings_other_night_alpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:max="200"
                    app:min="100"
                    app:title="@string/settings_other_night_alpha" />

                <com.haleydu.cimoc.ui.widget.Option
                    android:id="@+id/settings_other_storage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_storage_summary"
                    app:title="@string/settings_other_storage" />

                <com.haleydu.cimoc.ui.widget.Option
                    android:id="@+id/settings_other_clear_cache"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:summary="@string/settings_other_clear_cache_summary"
                    app:title="@string/settings_other_clear_cache" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/custom_night_mask" />
</FrameLayout>