<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.hiroshi.cimoc.ui.widget.preference.ChoicePreference
            android:id="@+id/settings_reader_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_turn" />

        <com.hiroshi.cimoc.ui.widget.preference.ChoicePreference
            android:id="@+id/settings_reader_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_orientation" />

        <com.hiroshi.cimoc.ui.widget.Option
            android:id="@+id/settings_reader_click_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_click_event_summary"
            app:title="@string/settings_reader_click_event" />

        <com.hiroshi.cimoc.ui.widget.Option
            android:id="@+id/settings_reader_long_click_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_long_click_event_summary"
            app:title="@string/settings_reader_long_click_event" />

        <com.hiroshi.cimoc.ui.widget.preference.CheckBoxPreference
            android:id="@+id/settings_reader_load_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_load_prev_summary"
            app:title="@string/settings_reader_load_prev" />

        <com.hiroshi.cimoc.ui.widget.preference.CheckBoxPreference
            android:id="@+id/settings_reader_load_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_load_next_summary"
            app:title="@string/settings_reader_load_next" />

        <com.hiroshi.cimoc.ui.widget.preference.CheckBoxPreference
            android:id="@+id/settings_reader_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_interval_summary"
            app:title="@string/settings_reader_interval" />
    </LinearLayout>
</ScrollView>