<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.hiroshi.cimoc.ui.custom.preference.ChoicePreference
            android:id="@+id/settings_reader_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_turn"/>
        <com.hiroshi.cimoc.ui.custom.preference.ChoicePreference
            android:id="@+id/settings_reader_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_orientation"/>
        <com.hiroshi.cimoc.ui.custom.Option
            android:id="@+id/settings_reader_click_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_click_event"
            app:summary="@string/settings_reader_click_event_summary"/>
        <com.hiroshi.cimoc.ui.custom.Option
            android:id="@+id/settings_reader_long_click_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_long_click_event"
            app:summary="@string/settings_reader_long_click_event_summary"/>
        <com.hiroshi.cimoc.ui.custom.preference.CheckBoxPreference
            android:id="@+id/settings_reader_load_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_load_prev"
            app:summary="@string/settings_reader_load_prev_summary"/>
        <com.hiroshi.cimoc.ui.custom.preference.CheckBoxPreference
            android:id="@+id/settings_reader_load_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_load_next"
            app:summary="@string/settings_reader_load_next_summary"/>
        <com.hiroshi.cimoc.ui.custom.preference.CheckBoxPreference
            android:id="@+id/settings_reader_white_edge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_white_edge"
            app:summary="@string/settings_reader_white_edge_summary"/>
        <com.hiroshi.cimoc.ui.custom.preference.SliderPreference
            android:id="@+id/settings_reader_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_reader_trigger"
            app:min="5"
            app:max="60"/>
    </LinearLayout>
</ScrollView>